fix for spacing across all components

--- a/src/components/CardGrid/CardGrid.sass
+++ b/src/components/CardGrid/CardGrid.sass
@@ -1,6 +1,3 @@
-.cardgrid-container
-    margin-top: 30px !important
-
 .cardgrid-header
     display: flex
     justify-content: flex-start
