--- a/src/components/ComingSoon/ComingSoon.sass
+++ b/src/components/ComingSoon/ComingSoon.sass
@@ -4,8 +4,7 @@
   display: flex
   flex-direction: row
   justify-content: space-between
-  margin-top: 20px !important
-
+  
 .comingsoon-text-container
   display: flex
   flex-direction: column
