--- a/src/components/EditorialContent/EditorialContent.sass
+++ b/src/components/EditorialContent/EditorialContent.sass
@@ -1,6 +1,6 @@
 .editorial-content-header
-    margin-top: 60px
-    margin-bottom: 30px
+    margin-top: $spacing-xl-desktop
+    margin-bottom: $spacing-l-desktop
     font-size: 32px !important
     color: $relevel-purple-dark
 
