--- a/src/components/Hero/Hero.sass
+++ b/src/components/Hero/Hero.sass
@@ -2,7 +2,7 @@
 .hero-modified
   display: flex
   flex-direction: row-reverse
-  margin-top: 60px
+  margin-top: $spacing-xl-desktop
 
 .hero-text
   padding-left: 0 !important
