--- a/src/components/PromoHorizontal/PromoHorizontal.sass
+++ b/src/components/PromoHorizontal/PromoHorizontal.sass
@@ -1,7 +1,6 @@
 .promohorizontal-container
     display: flex
     flex-direction: row
-    margin-top: 60px !important
 
 .promohorizontal-text-container
     display: flex
