--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -17,6 +17,15 @@ $relevel-pink: #C55B87
 $relevel-mint: #5DC4B3
 $relevel-green: #66FFD1
 
+// Spacing
+
+$spacing-xxl-desktop: 64px
+$spacing-xl-desktop: 48px
+$spacing-l-desktop: 32px
+$spacing-m-desktop: 24px
+$spacing-s-desktop: 16px
+$spacing-xs-desktop: 8px
+
 @import "./Navbar/Navbar.sass"
 @import "./Hero/Hero.sass"
 @import "./PromoLooper/PromoLooper.sass"
@@ -283,6 +292,10 @@ h2
 h3
   line-height: 28px
   font-size: 16px
+
+.section
+  padding-top: $spacing-xxl-desktop
+  padding-bottom: 0
 
 /*a 
   margin-bottom: 2px
